:recycle: refactor: 重构ui层，优化事件处理逻辑，新增设置变更事件